--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,12 +3,22 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://10.210.28.177:3306/sell?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://mysqladdress?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+  redis:
+    host: redisadd
+    port: 6379
+    jedis:
+      pool:
+        max-idle: 8
+        min-idle: 0
+        max-active: 8
+        max-wait: -1
 server:
   servlet:
     context-path: /sell
+  port: 8081
 logging:
   level:
-    com.example.demo.DAO.mapper: trace
+    com.example.demo.dataobject.mapper: trace
 mybatis:
   mapper-locations: classpath:mapper/*.xml
